--- a/custom.css
+++ b/custom.css
@@ -6,8 +6,20 @@
 
 body * {
     transition: all .3s;
+}
 
-    background-color: red;
+/* ~~~~~~~~~~~~~~~~~~ animation ~~~~~~~~~~~~~~~~~~ */
+
+@keyframes TextLoop {
+    0% {
+        -webkit-transform: translateX(0);
+        transform: translateX(0);
+    }
+
+    100% {
+        -webkit-transform: translateX(-100%);
+        transform: translateX(-100%);
+    }
 }
 
 /* ~~~~~~~~~~~~~~~~~~ header(Btn) ~~~~~~~~~~~~~~~~~~ */
@@ -113,25 +125,28 @@ body * {
 
 .first-moveani {
     padding: 30px 0 30px 0;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    gap: 7vw;
+
+    transition: 0.3s;
+    animation: TextLoop 100s linear infinite;
 
     position: absolute;
     top: 0;
 
-    & * {
-        margin-right: 7vw;
-    }
-
     & div {
         display: inline-block;
 
-        width: 15px;
-        height: 15px;
+        width: 10px;
+        height: 10px;
         background-color: var(--point-color);
         border-radius: 15px;
     }
 
     & span {
-        font-size: 1.5rem;
+        font-size: 1rem;
         font-weight: 300;
         color: #A5A5A5;
         white-space: nowrap;
@@ -188,6 +203,17 @@ body * {
 .first-subtext {
     line-height: 180%;
     letter-spacing: 1px;
+
+    & .typing-txt {
+        display: none;
+    }
+
+    & .typing {
+        display: block;
+        width: 500px;
+        border: 3px solid red;
+        word-break: keep-all;
+    }
 }
 
 .first-seetext {
@@ -226,9 +252,10 @@ body * {
 .profile-img {
     width: 400px;
     height: 300px;
+
     & svg {
         width: 100%;
-        height:100%;
+        height: 100%;
     }
 }
 
@@ -238,7 +265,7 @@ body * {
     text-transform: uppercase;
     gap: 20px;
 
-    padding-top: 185px;
+    padding-top: 150px;
 }
 
 .profile-left .main-title {
@@ -506,7 +533,6 @@ body * {
     filter: grayscale(100%);
 
     & * {
-        width: 20vw;
         filter: drop-shadow(1px 1px 4px rgba(0, 0, 0, 0.6));
         color: #fff;
 
@@ -514,6 +540,7 @@ body * {
     }
 
     & div {
+        width: 20vw;
         padding-bottom: 15px;
         border-bottom: 1px solid #fff;
         font-size: 1.5rem;
@@ -561,6 +588,10 @@ body * {
     font-size: 7vw;
     color: transparent;
     -webkit-text-stroke: 2px #000;
+}
+
+.comment {
+    font-size: 1.2rem;
 }
 
 .email:hover {
@@ -612,18 +643,14 @@ body * {
     }
 
     .first-moveani {
-        & * {
-            margin-right: 3vw;
-        }
+        gap: 3vw;
+        animation: TextLoop 70s linear infinite;
 
         & div {
-            width: 12px;
-            height: 12px;
+            width: 8px;
+            height: 8px;
         }
 
-        & span {
-            font-size: 1rem;
-        }
     }
 
     .title-text {
